@@ -1,6 +1,8 @@
 === (ongoing) ===
 
 - Added factories and models 
+- Added admins
+- Added django-aps-bom to test_requirements.txt because travis.ci fails
 
 === 0.0.1 ===
 
